Semantic colors should not be transformed by color-filter https://bugs.webkit.org/show_bug.cgi?id=186566 <rdar://problem/40705739>

Reviewed by Simon Fraser.

Source/WebCore:

Test: css3/color-filters/color-filter-ignore-semantic.html

* platform/graphics/Color.h:
(WebCore::Color::Color):
(WebCore::Color::isSemantic const):
(WebCore::Color::setIsSemantic):

Add a bit to Color to indicate it originated from a semantic color name.
Note that a color compares unequal to the semantic version of the same color.

* platform/graphics/filters/FilterOperations.cpp:
(WebCore::FilterOperations::transformColor const):
* platform/graphics/mac/ColorMac.h:
* platform/graphics/mac/ColorMac.mm:
(WebCore::semanticColorFromNSColor):
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::systemColor const):

Set the bit for semantic system colors.

* rendering/RenderTreeAsText.cpp:
(WebCore::RenderTreeAsText::writeRenderObject):

Fix up the output to avoid unneccary render tree dump changes.

LayoutTests:

* css3/color-filters/color-filter-ignore-semantic-expected.html: Added.
* css3/color-filters/color-filter-ignore-semantic.html: Added.


Canonical link: https://commits.webkit.org/201997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232892 268f45cc-cd09-0410-ab3c-d52691b4dbfc