Source/WebCore/platform/graphics/filters/FilterOperations.cpp
@@ -124,6 +124,9 @@ bool FilterOperations::transformColor(Color& color) const
 {
     if (isEmpty() || !color.isValid())
         return false;
+    // Color filter does not apply to semantic CSS colors (like "Windowframe").
+    if (color.isSemantic())
+        return false;
 
     FloatComponents components;
     color.getRGBA(components.components[0], components.components[1], components.components[2], components.components[3]);
